[gd_scene load_steps=15 format=3 uid="uid://b1ooq57kbn570"]

[ext_resource type="Script" uid="uid://bpwb4ei4nt8iq" path="res://script/change_piece_menu.gd" id="1_ti48r"]
[ext_resource type="Texture2D" uid="uid://bfchvyuuyqfxy" path="res://assets/button_wp.png" id="2_0c5v6"]
[ext_resource type="Texture2D" uid="uid://ohipsoera8ee" path="res://assets/button_wp_pressed.png" id="3_26wsa"]
[ext_resource type="Texture2D" uid="uid://celtfo2o8xm2g" path="res://assets/button_focus.tres" id="4_26wsa"]
[ext_resource type="Texture2D" uid="uid://fruy2kvdvpm2" path="res://assets/button_wr.png" id="4_vy7gn"]
[ext_resource type="Texture2D" uid="uid://iyx5jpa23qd8" path="res://assets/button_wr_pressed.png" id="5_jlinb"]
[ext_resource type="Texture2D" uid="uid://dy043s73i3b0f" path="res://assets/button_wn.png" id="6_vbpyi"]
[ext_resource type="Texture2D" uid="uid://e67iycirykhg" path="res://assets/button_wn_pressed.png" id="7_07rv0"]
[ext_resource type="Texture2D" uid="uid://c5xp4pp0amvjl" path="res://assets/button_wb.png" id="8_gvquh"]
[ext_resource type="Texture2D" uid="uid://dgig1q8l7dh2q" path="res://assets/button_wb_pressed.png" id="9_uamqp"]
[ext_resource type="Texture2D" uid="uid://c11ybu57r8df" path="res://assets/button_wq.png" id="10_8twci"]
[ext_resource type="Texture2D" uid="uid://c5scixb5g6jb8" path="res://assets/button_wq_pressed.png" id="11_mofyg"]
[ext_resource type="Texture2D" uid="uid://c3sfeyj01ixm4" path="res://assets/button_wk.png" id="12_g72ch"]
[ext_resource type="Texture2D" uid="uid://b1ju1uug4jyqt" path="res://assets/button_wk_pressed.png" id="13_3k3nb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ti48r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 50.0
grow_vertical = 2
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Pawn" type="TextureButton" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("2_0c5v6")
texture_pressed = ExtResource("3_26wsa")
texture_disabled = ExtResource("3_26wsa")

[node name="TextureRect_Pawn" type="TextureRect" parent="VBoxContainer/Control"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_26wsa")

[node name="Control2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Rook" type="TextureButton" parent="VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("4_vy7gn")
texture_pressed = ExtResource("5_jlinb")
texture_disabled = ExtResource("5_jlinb")

[node name="TextureRect_Rook" type="TextureRect" parent="VBoxContainer/Control2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_26wsa")

[node name="Control3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Bishop" type="TextureButton" parent="VBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("8_gvquh")
texture_pressed = ExtResource("9_uamqp")
texture_disabled = ExtResource("9_uamqp")

[node name="TextureRect_Bishop" type="TextureRect" parent="VBoxContainer/Control3"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_26wsa")

[node name="Control4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Knight" type="TextureButton" parent="VBoxContainer/Control4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("6_vbpyi")
texture_pressed = ExtResource("7_07rv0")
texture_disabled = ExtResource("7_07rv0")

[node name="TextureRect_Knight" type="TextureRect" parent="VBoxContainer/Control4"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_26wsa")

[node name="Control5" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Queen" type="TextureButton" parent="VBoxContainer/Control5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("10_8twci")
texture_pressed = ExtResource("11_mofyg")
texture_disabled = ExtResource("11_mofyg")

[node name="TextureRect_Queen" type="TextureRect" parent="VBoxContainer/Control5"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_26wsa")

[node name="Control6" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="King" type="TextureButton" parent="VBoxContainer/Control6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("12_g72ch")
texture_pressed = ExtResource("13_3k3nb")
texture_disabled = ExtResource("13_3k3nb")

[node name="TextureRect_King" type="TextureRect" parent="VBoxContainer/Control6"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_26wsa")

[connection signal="button_down" from="VBoxContainer/Control/Pawn" to="." method="_on_pawn_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/Control/Pawn" to="." method="_on_pawn_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Control/Pawn" to="." method="_on_pawn_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/Control2/Rook" to="." method="_on_rook_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/Control2/Rook" to="." method="_on_rook_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Control2/Rook" to="." method="_on_rook_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/Control3/Bishop" to="." method="_on_bishop_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/Control3/Bishop" to="." method="_on_bishop_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Control3/Bishop" to="." method="_on_bishop_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/Control4/Knight" to="." method="_on_knight_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/Control4/Knight" to="." method="_on_knight_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Control4/Knight" to="." method="_on_knight_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/Control5/Queen" to="." method="_on_queen_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/Control5/Queen" to="." method="_on_queen_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Control5/Queen" to="." method="_on_queen_mouse_exited"]
[connection signal="button_down" from="VBoxContainer/Control6/King" to="." method="_on_king_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/Control6/King" to="." method="_on_king_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Control6/King" to="." method="_on_king_mouse_exited"]
